k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet-s3
  labels: { app: projet-s3 }
spec:
  replicas: 2
  selector: { matchLabels: { app: projet-s3 } }
  template:
    metadata: { labels: { app: projet-s3 } }
    spec:
      containers:
        - name: projet-s3
          image: restlessness/projet-s3:latest
          ports: [{ containerPort: 8080 }]
          readinessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
