k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projet-s3-service
  labels: { app: projet-s3 }
spec:
  selector: { app: projet-s3 }
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
