k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-s3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: projet-s3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projet-s3-service
                port: { number: 80 }
